Updated service files to allow running under JRE 21.